# projects

./: README.md
JavaBasketDistributor/: pom.xml
JavaBasketDistributor/src/test/java/: test1.java
MP3 cutter/: info.sh  script.sh
MP3 cutter/openjfx/javafx-base/17.0.2/: _remote.repositories  javafx-base-17.0.2-linux.jar.sha1
MP3 cutter/openjfx/javafx-base/17.0.6/: _remote.repositories  javafx-base-17.0.6-linux.jar.sha1
MP3 cutter/openjfx/javafx-base/21-ea+24/: _remote.repositories  javafx-base-21-ea+24-linux.jar.sha1
MP3 cutter/openjfx/javafx-controls/17.0.2/: _remote.repositories  javafx-controls-17.0.2-linux.jar.sha1
MP3 cutter/openjfx/javafx-controls/17.0.6/: _remote.repositories  (+1 more)
MaciejowkaSongbook/: pubspec.yaml
MaciejowkaSongbook/lib/: main.dart
MaciejowkaSongbook/lib/Model/: l.dart  piesni.dart
MaciejowkaSongbook/lib/Screens/: ChoiceScreen.dart  OptionsScreen.dart  PresentationScreen.dart  ProgramCreator.dart  SongDetailScreen.dart  SongMenu.dart  SongSearch.dart  button.dart  unused.dart
go-game/: README.md
go-game/client/: .gitignore  Makefile  pom.xml
go-game/server/: Makefile  pom.xml
parcelWorker/: CMakeLists.txt  Fetcher.cpp  KDTree.cpp  ParcelEdge.cpp  ParcelPoint.cpp  Point.cpp  PointVector.cpp  PowiatFetcher.cpp  PowiatParser.cpp  PowiatReader.cpp  dzialki.gfs  main  main.cpp  query.txt  temp.cpp  temp.xml
placeholder/: CMakeLists.txt
placeholder/include/: typedef.hpp
placeholder/include/enums/: ImportFlags.hpp
placeholder/include/exceptions/: Exception.hpp  FileException.hpp
placeholder/include/file_handling/: FileImport.hpp  XMLDocument.hpp
placeholder/include/loader/: Import.hpp
placeholder/include/logic/: RequestData.hpp
placeholder/include/process/: Operation.hpp  XMLDataProcesser.hpp  XMLDataRetriver.hpp
placeholder/src/: CMakeLists.txt  main.cpp
placeholder/src/file_handling/: FileExport.cpp  FileImport.cpp  XMLDocument.cpp
placeholder/src/loader/: Import.cpp
placeholder/src/logic/: RequestData.cpp
placeholder/src/process/: Operation.cpp  XMLDataProcesser.cpp  XMLDataRetriver.cpp  pom.cpp
placeholder/tests/: CMakeLists.txt  test_main.cpp
(+179 files in other folders)
